# nucleo-t4-rs

./: .gitattributes  Cargo.toml  README.md  flash.bat  memory.x
.cargo/: config.toml
src/: main.rs
